--- a/wrappers/rust/Cargo.toml
+++ b/wrappers/rust/Cargo.toml
@@ -10,6 +10,7 @@ members = [
   "icicle-curves/icicle-grumpkin",
   "icicle-fields/icicle-babybear",
   "icicle-fields/icicle-stark252",
+  "icicle-fields/icicle-inv-fhe79",
   "icicle-hash",
 ]
 exclude = [
